# scene_api

./: .dockerignore  .env.example  .flaskenv  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  swagger.yaml
migrations/versions/: 022e56ea0b9e_.py  0fa2288ddd16_.py  d9049c9fb9ed_.py
scene_api/: app.py  extensions.py  settings.py
scene_api/api/: models.py  routes.py  schemas.py
scene_api/base/: models.py
scene_api/decorators/: auth.py
scene_api/exceptions/: auth.py  errors.py
scene_api/models/: __init__.py  base.py  video.py  vote.py
scene_api/routes/: __init__.py  errors.py  video.py  vote.py
scene_api/schemas/: __init__.py  base.py  pagination.py  video.py  vote.py
scene_api/services/: uploader.py
scene_api/video/: __init__.py  models.py  views.py
tests/: conftest.py  test_routes.py
tests/fixtures/: videos.py  votes.py
