[tool.poetry]
name = "scene-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scene_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-marshmallow = {extras = ["sqlalchemy"], version = "^0.14.0"}
flask-migrate = "^4.0.0"
webargs = "^8.2.0"
marshmallow = "^3.19.0"
sqlalchemy = "^1.4.46"
python-dotenv = "^0.21.0"
boto3 = "^1.26.46"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
isort = {version = "^6.0.0b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
